--- a/index.html
+++ b/index.html
@@ -7,14 +7,30 @@
     <link rel="stylesheet" href="styles/main.scss">
     <title>KNWPrints</title>
 </head>
+
 <body>
- <section class="main-hero">
-<div class="heading">
-    <h2>Welcome To My Store</h2>
-    <h1>Art in a New Perspective</h1>
-    <img src="assets/images/logo knw.jpg" alt="logo">
-    <h3>Prints and Originals</h3>
-</div>
- </section>
+    <center><nav>
+      <a href="index.html">Home</a> 
+      <a href="Shipping&handling.html">Shipping&Handling</a>
+      <a href="FAQs.html">FAQs</a>
+      <a href="Contact.html">Contact</a>
+    </nav></center>
+<section class="section-hero">
+     <center><h1>PYGMY149</h1></center>
+    <center><h3>Art Through A New Perspective</h3></center>
+      <center><h4>Products</h4></center><br/><br/><br/>
+    <center><h5>Mint</h5></center>
+    <center><img src="images/Anime.jpg.jpg"></center><br/><br/><br/><br/>
+	  <center><h5>Prince</h5></center>
+	  <center><img src="images/Prince.jpg.jpg"></center><br/><br/><br/><br/>
+	  <center><h5>Ayumi</h5></center>
+	  <center><img src="images/Ayumi.jpg.jpg"></center>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/>
+ <br/><br/><center><a href="https://pygmy149.bigcartel.com/products">Bigcartel</a></center>
+  </section>
+  <footer>
+    <center><strong>Home Products Shipping/handling FAQs Contact Cart Search</srtong></center>
+  </footer>
+	  
 </body>
 </html>
