--- a/FAQs.html
+++ b/FAQs.html
@@ -14,12 +14,6 @@
 
   </head>
   <body>
-      <div class="container">
-          <div class="row">
-            <div class="col col-lg-12 bg-warning"></div>
-            <div class="col col-lg-12 bg-danger"></div>
-          </div>
-        </div>
        <center><nav>
         <a href="index.html">Home</a> 
         <a href="Shipping&handling.html">Shipping&Handling</a>
@@ -27,11 +21,13 @@
         <a href="Contact.html">Contact</a>
       </nav></center>
   <section class="section-hero">
-       <center><h1>PYGMY149</h1></center>
-         <center><h4>Contact</h4></center>
-         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><center><p>Email: kiara14pygmy@yahoo.com<br/>Twitter: kiara14pygmy<br/>Instagram: pygmy149</p></center>
+      <center><h1>PYGMY149</h1></center>
+         <center><h4>FAQs</h4></center>
+         <br/><br/><br/><br/><br/><br/><br/><br/><br/> <center><p>"Commissions"<br/>I do not accept commissions, I draw from what catches my eye<br/> <br/>"Am I able to return my print?"<br/>If the print arrives damaged then yes, but I will not accept returns otherwise</p></center>
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-  <br/><br/><br/><br/><br/><br/><br/>
+  <br/><br/><br/><br/><br/><br/><br/><br/><br/>
+  <button type="button" class="btn btn-danger">Important</button>
+  
   <footer>
     <center><strong>Home Products Shipping/handling FAQs Contact Cart Search</srtong></center>
   </footer>
