--- a/Shipping&handling.html
+++ b/Shipping&handling.html
@@ -1,8 +1,8 @@
 <html>
-   <head>
+  <head>
       <title>PYGMY149</title>
       <link href="main.css" rel="stylesheet" type="text/css"/>
-	   <!-- Global site tag (gtag.js) - Google Analytics -->
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127729152-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -14,13 +14,7 @@
 
   </head>
   <body>
-      <div class="container">
-          <div class="row">
-            <div class="col col-lg-12 bg-warning"></div>
-            <div class="col col-lg-12 bg-danger"></div>
-          </div>
-        </div>
-       <center><nav>
+      <center><nav>
         <a href="index.html">Home</a> 
         <a href="Shipping&handling.html">Shipping&Handling</a>
         <a href="FAQs.html">FAQs</a>
@@ -28,8 +22,11 @@
       </nav></center>
   <section class="section-hero">
        <center><h1>PYGMY149</h1></center>
-         <center><h4>Contact</h4></center>
-         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><center><p>Email: kiara14pygmy@yahoo.com<br/>Twitter: kiara14pygmy<br/>Instagram: pygmy149</p></center>
+         <center><h4>Shipping & Handling</h4></center>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+ <center><p>I do bulk orders by the end of the week. <br/>Shipping is usually 2-7 days, it may vary depending on weather or holidays.<br/>
+If your order is time sensitive please contact me for arrangements. <br/>All artwork will be sent through ups.<br/>
+If the artwork is returned for failure of collect or wrong address,<br/>i am able to resend but at the buyers cost.</p></center>
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/>
   <footer>
