--- a/index.html
+++ b/index.html
@@ -15,16 +15,40 @@
       <a href="FAQs.html">FAQs</a>
       <a href="Contact.html">Contact</a>
     </nav></center>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <center><a class="navbar-brand" href="#">KNW Prints</a></center>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 <section class="section-hero">
-     <center><h1>PYGMY149</h1></center>
+     <center><h1>KNW Prints</h1></center>
     <center><h3>Art Through A New Perspective</h3></center>
       <center><h4>Products</h4></center><br/><br/><br/>
-    <center><h5>Mint</h5></center>
-    <center><img src="images/Anime.jpg.jpg"></center><br/><br/><br/><br/>
-	  <center><h5>Prince</h5></center>
-	  <center><img src="images/Prince.jpg.jpg"></center><br/><br/><br/><br/>
-	  <center><h5>Ayumi</h5></center>
-	  <center><img src="images/Ayumi.jpg.jpg"></center>
+      <center><div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/Anime.jpg.jpg" width="200" height="200" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/Prince.jpg.png" width="200" height="300" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/Ayumi.jpg.png" width="400" height="300" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/Ariana.jpg.jpg" width="200" height="200" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div></center>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/>
  <br/><br/><center><a href="https://pygmy149.bigcartel.com/products">Bigcartel</a></center>
   </section>
