--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1 id="title">Hello!</h1>
     <center><nav>
       <a href="index.html">Home</a> 
       <a href="Shipping&handling.html">Shipping&Handling</a>
