--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <center><div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/images/Anime.jpg.jpg" width="200" height="200" class="d-block w-100" alt="...">
+            <img src="assets/images/Anime.jpg.jpg" width="50px" height="50px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/Prince.jpg.png" width="200" height="300" class="d-block w-100" alt="...">
+            <img src="assets/images/Prince.jpg.png" width="50px" height="60px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/Ayumi.jpg.png" width="400" height="300" class="d-block w-100" alt="...">
+            <img src="assets/images/Ayumi.jpg.png" width="60px" height="50px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/Ariana.jpg.jpg" width="200" height="200" class="d-block w-100" alt="...">
+            <img src="assets/images/Ariana.jpg.jpg" width="50px" height="50px" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
