--- a/Shipping&handling.html
+++ b/Shipping&handling.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-      <title>PYGMY149</title>
-      <link href="main.css" rel="stylesheet" type="text/css"/>
+      <title>KNW Prints</title>
+      <link rel="stylesheet" href="styles/main.css">
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127729152-1"></script>
 <script>
@@ -15,13 +15,13 @@
   </head>
   <body>
       <center><nav>
-        <a href="index.html">Home</a> 
-        <a href="Shipping&handling.html">Shipping&Handling</a>
-        <a href="FAQs.html">FAQs</a>
-        <a href="Contact.html">Contact</a>
+          <a href="index.html">Home</a> 
+          <a href="Shipping&handling.html">Shipping&Handling</a>
+          <a href="FAQs.html">FAQs</a>
+          <a href="Contact.html">Contact</a>
       </nav></center>
   <section class="section-hero">
-       <center><h1>PYGMY149</h1></center>
+       <center><h1>KNW Prints</h1></center>
          <center><h4>Shipping & Handling</h4></center>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
  <center><p>I do bulk orders by the end of the week. <br/>Shipping is usually 2-7 days, it may vary depending on weather or holidays.<br/>
@@ -30,7 +30,7 @@ If the artwork is returned for failure of collect or wrong address,<br/>i am abl
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/>
   <footer>
-    <center><strong>Home Products Shipping/handling FAQs Contact Cart Search</srtong></center>
+    <center><strong>Home Shipping/handling FAQs Contact Cart</srtong></center>
   </footer>
 </body>
 </html>
