--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <html>
    <head>
-      <title>PYGMY149</title>
-      <link href="main.css" rel="stylesheet" type="text/css"/>
+      <title>KNW Prints</title>
+      <link rel="stylesheet" href="styles/main.css">
 	   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127729152-1"></script>
 <script>
@@ -21,19 +21,19 @@
           </div>
         </div>
        <center><nav>
-        <a href="index.html">Home</a> 
-        <a href="Shipping&handling.html">Shipping&Handling</a>
-        <a href="FAQs.html">FAQs</a>
-        <a href="Contact.html">Contact</a>
+          <a href="index.html">Home</a> 
+          <a href="Shipping&handling.html">Shipping&Handling</a>
+          <a href="FAQs.html">FAQs</a>
+          <a href="Contact.html">Contact</a>
       </nav></center>
   <section class="section-hero">
-       <center><h1>PYGMY149</h1></center>
+       <center><h1>KNW Prints</h1></center>
          <center><h4>Contact</h4></center>
          <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><center><p>Email: kiara14pygmy@yahoo.com<br/>Twitter: kiara14pygmy<br/>Instagram: pygmy149</p></center>
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/>
   <footer>
-    <center><strong>Home Products Shipping/handling FAQs Contact Cart Search</srtong></center>
+    <center><strong>Home Shipping/handling FAQs Contact Cart</srtong></center>
   </footer>
 </body>
 </html>
