--- a/FAQs.html
+++ b/FAQs.html
@@ -1,7 +1,7 @@
 <html>
    <head>
-      <title>PYGMY149</title>
-      <link href="main.css" rel="stylesheet" type="text/css"/>
+      <title>KNW Prints</title>
+      <link rel="stylesheet" href="styles/main.css">
 	   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127729152-1"></script>
 <script>
@@ -15,21 +15,21 @@
   </head>
   <body>
        <center><nav>
-        <a href="index.html">Home</a> 
-        <a href="Shipping&handling.html">Shipping&Handling</a>
-        <a href="FAQs.html">FAQs</a>
-        <a href="Contact.html">Contact</a>
+          <a href="index.html">Home</a> 
+          <a href="Shipping&handling.html">Shipping&Handling</a>
+          <a href="FAQs.html">FAQs</a>
+          <a href="Contact.html">Contact</a>
       </nav></center>
   <section class="section-hero">
-      <center><h1>PYGMY149</h1></center>
+      <center><h1>KNW Prints</h1></center>
          <center><h4>FAQs</h4></center>
          <br/><br/><br/><br/><br/><br/><br/><br/><br/> <center><p>"Commissions"<br/>I do not accept commissions, I draw from what catches my eye<br/> <br/>"Am I able to return my print?"<br/>If the print arrives damaged then yes, but I will not accept returns otherwise</p></center>
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/><br/><br/>
-  <button type="button" class="btn btn-danger">Important</button>
+
   
   <footer>
-    <center><strong>Home Products Shipping/handling FAQs Contact Cart Search</srtong></center>
+    <center><strong>Home Shipping/handling FAQs Contact Cart</srtong></center>
   </footer>
 </body>
 </html>
