--- a/index.html
+++ b/index.html
@@ -11,58 +11,65 @@
 </head>
 
 <body>
-    <h1 id="title">Hello!</h1>
+   <center><h1 id="title">Welcome!</h1></center>
+    <center><button class="heading" id="button">jquery test</button></center>
+
     <center><nav>
-      <a href="index.html">Home</a> 
-      <a href="Shipping&handling.html">Shipping&Handling</a>
-      <a href="FAQs.html">FAQs</a>
-      <a href="Contact.html">Contact</a>
+        <a href="index.html">Home</a> 
+        <a href="Shipping&handling.html">Shipping&Handling</a>
+        <a href="FAQs.html">FAQs</a>
+        <a href="Contact.html">Contact</a>
     </nav></center>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <center><a class="navbar-brand" href="#">KNW Prints</a></center>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      <center><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button></center><br/>
+
 <section class="section-hero">
      <center><h1>KNW Prints</h1></center>
     <center><h3>Art Through A New Perspective</h3></center>
       <center><h4>Products</h4></center><br/><br/><br/>
       <center><div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/images/Anime.jpg.jpg" width="500px" height="500px" class="d-block w-100" alt="...">
+            <div class="carousel-item active">
+              <img src="assets/images/Anime.jpg.jpg" width="500px" height="607px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/Prince.jpg.png" width="50px" height="60px" class="d-block w-100" alt="...">
+            <img src="assets/images/Prince.jpg.png" width="500px" height="683px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/Ayumi.jpg.png" width="60px" height="50px" class="d-block w-100" alt="...">
+            <img src="assets/images/Ayumi.jpg.png" width="500px" height="389px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/images/Ariana.jpg.jpg" width="50px" height="50px" class="d-block w-100" alt="...">
+            <img src="assets/images/Ariana.jpg.jpg" width="500px" height="507px" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+       <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div></center>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/>
- <br/><br/><center><a href="https://pygmy149.bigcartel.com/products">Bigcartel</a></center>
-  </section>
-  <footer>
-    <center><strong>Home Products Shipping/handling FAQs Contact Cart Search</srtong></center>
-  </footer>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>  
-	    <script src="js/main.js"></script>
+      </div></center><br/><br/><br/>
+      <center><h1>About Me</h1></center>
+      <center><h4>From fine arts to digital media, nothing is off limits. 
+        I pride myself in my work especially when it comes down to the details.  
+        I specialize in illustration but i can also do graphic work in Adobe. 
+        When it comes to illustration, you’ll find a bunch of portraits of people. 
+        From celebrities to random people on the street. My style changes from time to time. 
+        I don’t want to limit myself just to what I know, I’m open to all ideas. 
+        Whether its a gallery of cats or oblong structures, everything will be ventured.</h4></center><br/><br/><br/>
+      <br/><br/><br/><br/><br/><br/><br/><br/>
+      <footer><center>Home Shipping/handling FAQs Contact</a></center></footer>
+      </section><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+ 
+
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
