--- a/Contact.html
+++ b/Contact.html
@@ -32,8 +32,9 @@
          <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><center><p>Email: kiara14pygmy@yahoo.com<br/>Twitter: kiara14pygmy<br/>Instagram: pygmy149</p></center>
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/>
-  <footer>
-    <center><strong>Home Shipping/handling FAQs Contact Cart</srtong></center>
-  </footer>
+  <footer><center><a href="index.html">Home</a> 
+    <a href="Shipping&handling.html">Shipping&Handling</a>
+    <a href="FAQs.html">FAQs</a>
+    <a href="Contact.html">Contact</a></center></footer>
 </body>
 </html>
