--- a/FAQs.html
+++ b/FAQs.html
@@ -27,9 +27,12 @@
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-  
-  <footer>
-    <center><strong>Home Shipping/handling FAQs Contact Cart</srtong></center>
-  </footer>
+  <center><footer><a href="index.html">Home</a> 
+    <a href="Shipping&handling.html">Shipping&Handling</a>
+    <a href="FAQs.html">FAQs</a>
+    <a href="Contact.html">Contact</a></footer></center>
+
+
+
 </body>
 </html>
