--- a/Shipping&handling.html
+++ b/Shipping&handling.html
@@ -2,15 +2,7 @@
   <head>
       <title>KNW Prints</title>
       <link rel="stylesheet" href="styles/main.css">
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127729152-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-127729152-1');
-</script>
 
   </head>
   <body>
@@ -29,8 +21,12 @@ If your order is time sensitive please contact me for arrangements. <br/>All art
 If the artwork is returned for failure of collect or wrong address,<br/>i am able to resend but at the buyers cost.</p></center>
  </section><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <br/><br/><br/><br/><br/><br/><br/>
-  <footer>
-    <center><strong>Home Shipping/handling FAQs Contact Cart</srtong></center>
-  </footer>
+
+  <center><footer><a href="index.html">Home</a> 
+    <a href="Shipping&handling.html">Shipping&Handling</a>
+    <a href="FAQs.html">FAQs</a>
+    <a href="Contact.html">Contact</a></footer></center>
+
+
 </body>
 </html>
