--- a/index.html
+++ b/index.html
@@ -61,15 +61,19 @@
         When it comes to illustration, you’ll find a bunch of portraits of people. 
         From celebrities to random people on the street. My style changes from time to time. 
         I don’t want to limit myself just to what I know, I’m open to all ideas. 
-        Whether its a gallery of cats or oblong structures, everything will be ventured.</h4></center><br/><br/><br/>
-      <br/><br/><br/><br/><br/><br/><br/><br/>
-      <footer><center>Home Shipping/handling FAQs Contact</a></center></footer>
-      </section><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        Whether its a gallery of cats or oblong structures, everything will be ventured.</h4></center>
+      <br/><br/><br/><br/>
+      <footer><center><a href="index.html">Home</a> 
+        <a href="Shipping&handling.html">Shipping&Handling</a>
+        <a href="FAQs.html">FAQs</a>
+        <a href="Contact.html">Contact</a></center></footer>
+      </section><br/><br/>
  
 
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
+
 </body>
 </html>
