--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
    <center><h1 id="title">Welcome!</h1></center>
-    <center><button class="heading" id="button">jquery test</button></center>
+    <center><button class="heading" id="button">Store Opens 2020!</button></center>
 
     <center><nav>
         <a href="index.html">Home</a> 
